# relay

./: .gitignore  AUTH_SETUP.md  IMPLEMENTATION_HISTORY.md  PRODUCTION_CHECKLIST.md  README.md  UX_SPEC.md  pyproject.toml
docs/: README.md
docs/daily/: README.md
docs/ref/: ARCHITECTURE.md  DOCS-OPERATING-MODEL.md
docs/status/: DECISION-LOG.md  EXECUTION-CHECKLIST.md  PROJECT-STATUS.md  TEST-MATRIX.md
docs/weekly/: README.md
src/relay/: __main__.py  adapters.py  cli.py  config.py  context.py  helper_agent.py  ids.py  models.py  prompts.py  repository.py  schemas.py  service.py  session_client.py  session_host.py  tui.py  workflow_store.py
tests/: test_adapters.py  test_prompts.py  test_repository.py  test_schemas.py  test_service.py  test_session_host.py  test_tui.py  test_workflow_store.py
