[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "relay"
version = "0.1.0"
description = "Manual multi-AI handoff orchestrator with CLI and TUI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "textual>=0.66.0",
]

[project.scripts]
relay = "relay.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
